# VimAsIDE

./: CMakeLists.txt  README.md
.config/nvim/: init.vim
src/myproject/: main.cpp
